--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,36 @@
-application-utility==1.3.2
-attrs==23.2.1.dev0
-autocommand==2.2.2
-beautifulsoup4==4.12.3
-btrfsutil==6.8.1
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-cryptography==42.0.6
-cupshelpers==1.0
-dbus-python==1.3.2
-distro==1.9.0
-docopt==0.6.2
-fastjsonschema==2.19.1
-greenlet==3.0.3
-httplib2==0.22.0
-idna==3.6
-inflect==7.2.1
-jaraco.context==4.3.0
-jaraco.functools==4.0.1
-jaraco.text==3.12.0
-keyutils==0.6
-lit==17.0.6.dev0
-lxml==5.2.2
-moddb==0.11.0
-more-itertools==10.2.0
-msgpack==1.0.5
-netsnmp-python==1.0a1
-nftables==0.1
-npyscreen==4.10.5
-ordered-set==4.1.0
-packaging==24.0
-pacman_mirrors==4.24.0
-pillow==10.3.0
-platformdirs==4.2.0
-ply==3.11
-pycairo==1.26.0
-pycparser==2.22
-pycups==2.0.4
-pycurl==7.45.2
-PyGObject==3.48.2
-pynvim==0.5.0
-pyparsing==3.1.2
-PyQt5==5.15.10
-PyQt5_sip==12.13.0
-pyrate-limiter==3.6.0
-PySide6==6.7.1
-pysmbc==1.0.25.1
+annotated-types==0.7.0
+anyio==4.4.0
+certifi==2024.6.2
+click==8.1.7
+dnspython==2.6.1
+email_validator==2.2.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+orjson==3.10.6
+pydantic==2.8.0
+pydantic_core==2.20.0
+Pygments==2.18.0
+python-dotenv==1.0.1
+python-multipart==0.0.9
 PyYAML==6.0.1
-reportlab==4.1.0
-requests==2.32.3
-setuptools==69.0.3
-shiboken2==5.15.13
-shiboken6==6.7.1
-shiboken6-generator==6.7.1
-six==1.16.0
-smbus==1.1
-soupsieve==2.5
-systemd-python==235
-TBB==0.2
-tomli==2.0.1
-toolz==0.12.1
-trove-classifiers==2024.5.23
-typeguard==4.2.1
-typing_extensions==4.12.0
-udiskie==2.5.3
-urllib3==1.26.18
-validate-pyproject==0.16
-wheel==0.43.0
+rich==13.7.1
+shellingham==1.5.4
+sniffio==1.3.1
+starlette==0.37.2
+typer==0.12.3
+typing_extensions==4.12.2
+ujson==5.10.0
+uvicorn==0.30.1
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
